# pixel-canvas

./: .travis.yml  Cargo.toml  README.md  README.tpl  gen-readme.sh
examples/: api_example.rs  julia-simd.rs  julia.rs  march.rs  readme.rs  spirograph.rs
src/: canvas.rs  color.rs  image.rs  input.rs  lib.rs  math.rs  prelude.rs  vector.rs
