[package]
name = "pixel-canvas"
version = "0.2.2"
authors = ["Cassie Jones <code@witchoflight.com>"]
edition = "2018"
description = """
A crate to make it easy to build interactive computer art with just a pixel buffer.
"""
repository = "https://github.com/porglezomp/pixel-canvas"
readme = "README.md"
keywords = ["image", "art", "interactive"]
categories = ["graphics", "rendering"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "porglezomp/pixel-canvas", branch = "develop" }

[dependencies]
glium = "0.28.0"

[dev-dependencies]
rayon = "1.2"
rand = "0.7"
rand_distr = "0.2"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
