[package]
name = "pixel-canvas"
version = "0.2.3"
authors = ["Cassie Jones <code@witchoflight.com>"]
edition = "2018"
description = """
A crate to make it easy to build interactive computer art with just a pixel buffer.
"""
repository = "https://github.com/porglezomp/pixel-canvas"
readme = "README.md"
keywords = ["image", "art", "interactive"]
categories = ["graphics", "rendering"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "porglezomp/pixel-canvas", branch = "develop" }

[dependencies]
glium = "0.31.0"

[dev-dependencies]
rayon = "1.5"
rand = "0.8"
rand_distr = "0.4"
packed_simd = { version = "0.3.6", package = "packed_simd_2" }
